--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/config.js
 
 # testing
 /coverage
@@ -14,7 +15,8 @@
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+
+.env
 
 npm-debug.log*
 yarn-debug.log*
